--- a/appz.yml
+++ b/appz.yml
@@ -26,7 +26,7 @@ volumes:
 properties:
     ADMIN_PASSWORD:     
        vault: ADMIN_PASSWORD
-    PROM_URL: http://prometheus-3.4:9090/
+    PROM_URL: http://prometheus-3-4:9090/
     GF_AUTH_GENERIC_OAUTH_ENABLED: true
     GF_AUTH_GENERIC_OAUTH_NAME: AppZ 
     GF_AUTH_GENERIC_OAUTH_CLIENT_ID: grafana
@@ -39,4 +39,4 @@ properties:
     GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: anyname
     GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(roles[*], 'admin') && 'Admin' || 'Viewer'
     GF_SERVER_ROOT_URL: https://grafana-prp.lowtouchcloud.io/
-    revision: 6
+    revision: 7
